--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ const tracks = [
   { name: "Guitarra Base", file: "tracks/CHB_RHYTHM_GUITAR.mp3" },
   { name: "Baixo", file: "tracks/CHB_BASS.mp3" },
   { name: "Bateria", file: "tracks/CHB_DRUMS.mp3" },
-  { name: "Metronomo", file "tracks/CHB_METR.mp3" }
+  { name: "Metronomo", file: "tracks/CHB_METR.mp3" }
 ];
 
 let audioElements = [];
