--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 <script>
 // Defina aqui as pistas para uma música
 const tracks = [
-  { name: "Voz", file: "tracks/CHB/VOCALS.mp3" },
-  { name: "Guitarra Lead", file: "tracks/CHB/LEAD_GUITAR.mp3" },
-  { name: "Guitarra Base", file: "tracks/CHB/RHYTHM_GUITAR.mp3" },
-  { name: "Baixo", file: "tracks/CHB/BASS.mp3" },
-  { name: "Bateria", file: "tracks/CHB/DRUMS.mp3" },
-  { name: "Metronomo", file: "tracks/CHB/METR.mp3" }
+  { name: "Voz", file: "tracks/AYGBMG/VOCALS.mp3" },
+  { name: "Guitarra Lead", file: "tracks/AYGBMG/LEAD_GUITAR.mp3" },
+  { name: "Guitarra Base", file: "tracks/AYGBMG/RHYTHM_GUITAR.mp3" },
+  { name: "Baixo", file: "tracks/AYGBMG/BASS.mp3" },
+  { name: "Bateria", file: "tracks/AYGBMG/DRUMS.mp3" },
+  { name: "Metronomo", file: "tracks/AYGBMG/METR.mp3" }
 ];
 
 let audioElements = [];
