--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Mixer da Banda</title>
+<title>Mixer InterROCK</title>
 <style>
   body { font-family: Arial, sans-serif; background: #222; color: white; text-align: center; padding: 20px; }
   .track { margin: 10px 0; }
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<h1>Mixer da Banda</h1>
+<h1>Mixer InterROCK</h1>
 <p>Escolha o volume de cada pista e aperte Play</p>
 
 <div id="mixer"></div>
@@ -25,12 +25,12 @@
 <script>
 // Defina aqui as pistas para uma música
 const tracks = [
-  { name: "Voz", file: "tracks/AYGBMG/VOCALS.mp3" },
-  { name: "Guitarra Lead", file: "tracks/AYGBMG/LEAD_GUITAR.mp3" },
-  { name: "Guitarra Base", file: "tracks/AYGBMG/RHYTHM_GUITAR.mp3" },
-  { name: "Baixo", file: "tracks/AYGBMG/BASS.mp3" },
-  { name: "Bateria", file: "tracks/AYGBMG/DRUMS.mp3" },
-  { name: "Metronomo", file: "tracks/AYGBMG/METR.mp3" }
+  { name: "Voz", file: "tracks/CHB/VOCALS.mp3" },
+  { name: "Guitarra Lead", file: "tracks/CHB/LEAD_GUITAR.mp3" },
+  { name: "Guitarra Base", file: "tracks/CHB/RHYTHM_GUITAR.mp3" },
+  { name: "Baixo", file: "tracks/CHB/BASS.mp3" },
+  { name: "Bateria", file: "tracks/CHB/DRUMS.mp3" },
+  { name: "Metronomo", file: "tracks/CHB/METR.mp3" }
 ];
 
 let audioElements = [];
