--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 // Defina aqui as pistas para uma música
 const tracks = [
   { name: "Voz", file: "tracks/CHB/VOCALS.mp3" },
-  { name: "Guitarra Lead", file: "tracks/CHB/LEAD_GUITAR.mp3" },
-  { name: "Guitarra Base", file: "tracks/CHB/RHYTHM_GUITAR.mp3" },
+  { name: "Guitarra Lead", file: "tracks/CHB/GUITAR_LEAD.mp3" },
+  { name: "Guitarra Base", file: "tracks/CHB/GUITAR_RHYTHM.mp3" },
   { name: "Baixo", file: "tracks/CHB/BASS.mp3" },
   { name: "Bateria", file: "tracks/CHB/DRUMS.mp3" },
   { name: "Metronomo", file: "tracks/CHB/METR.mp3" }
