--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@ const songs = {
     { name: "Guitarra Solo", file: "tracks/AYGBMG/LEAD_GUITAR.mp3" },
     { name: "Guitarra Base", file: "tracks/AYGBMG/RHYTHM_GUITAR.mp3" }
   ],
+  "The Darkness - I Believe in a Thing Called Love": [
+    { name: "Vocais", file: "tracks/IBIATCL/VOCALS.mp3" },
+    { name: "Back Vocal", file: "tracks/IBIATCL/BACK_VOCALS.mp3" },
+    { name: "Baixo", file: "tracks/IBIATCL/BASS.mp3" },
+    { name: "Bateria", file: "tracks/IBIATCL/DRUMS.mp3" },
+    { name: "Guitarras", file: "tracks/IBIATCL/GUITARS.mp3" },
+    { name: "Metronomo", file: "tracks/IBIATCL/METR.mp3" }
+  ],
   "Jet - Cold Hard Bitch": [
     { name: "Vocais", file: "tracks/CHB/VOCALS.mp3" },
     { name: "Baixo", file: "tracks/CHB/BASS.mp3" },
