--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@ const songs = {
     { name: "Guitarra Solo", file: "tracks/AYGBMG/LEAD_GUITAR.mp3" },
     { name: "Guitarra Base", file: "tracks/AYGBMG/RHYTHM_GUITAR.mp3" }
   ],
+  "Lenny Kravitz - 'Flavio' Away": [
+    { name: "Vocais", file: "tracks/FA/VOCALS.mp3" },
+    { name: "Back Vocal", file: "tracks/FA/BACK_VOCALS.mp3" },
+    { name: "Baixo", file: "tracks/FA/BASS.mp3" },
+    { name: "Bateria", file: "tracks/FA/DRUMS.mp3" },
+    { name: "Guitarras", file: "tracks/FA/GUITARS.mp3" },
+    { name: "Outro", file: "tracks/FA/OUTRO.mp3" },
+    { name: "Metronomo", file: "tracks/FA/METR.mp3" }
+  ],  
   "The Darkness - I Believe in a Thing Called Love": [
     { name: "Vocais", file: "tracks/IBIATCL/VOCALS.mp3" },
     { name: "Back Vocal", file: "tracks/IBIATCL/BACK_VOCALS.mp3" },
