--- a/index.html
+++ b/index.html
@@ -94,6 +94,15 @@ const songs = {
     { name: "Guitarra Solo", file: "tracks/CHB/GUITAR_LEAD.mp3" },
     { name: "Guitarra Base", file: "tracks/CHB/GUITAR_RHYTHM.mp3" },
     { name: "Metronomo", file: "tracks/CHB/METR.mp3" }
+  ],
+    "Stone Temple Pilots - Plush": [
+    { name: "Vocais", file: "tracks/P/VOCALS.mp3" },
+    { name: "Baixo", file: "tracks/P/BASS.mp3" },
+    { name: "Bateria", file: "tracks/P/DRUMS.mp3" },
+    { name: "Guitarra Solo", file: "tracks/P/GUITAR_LEAD.mp3" },
+    { name: "Guitarra Base", file: "tracks/P/GUITAR_RHYTHM.mp3" },
+    { name: "Outro", file: "tracks/P/OUTRO.mp3" },
+    { name: "Metronomo", file: "tracks/P/METR.mp3" }
   ]
 };
 
