--- a/index.html
+++ b/index.html
@@ -103,6 +103,15 @@ const songs = {
     { name: "Guitarra Base", file: "tracks/P/GUITAR_RHYTHM.mp3" },
     { name: "Outro", file: "tracks/P/OUTRO.mp3" },
     { name: "Metronomo", file: "tracks/P/METR.mp3" }
+  ],
+    "Silverchair - 'Tio Mauro'": [
+    { name: "Vocais", file: "tracks/TM/VOCALS.mp3" },
+    { name: "Baixo", file: "tracks/TM/BASS.mp3" },
+    { name: "Bateria", file: "tracks/TM/DRUMS.mp3" },
+    { name: "Guitarra Solo", file: "tracks/TM/GUITAR_LEAD.mp3" },
+    { name: "Guitarra Base", file: "tracks/TM/GUITAR_RHYTHM.mp3" },
+    { name: "Outro", file: "tracks/TM/OUTRO.mp3" },
+    { name: "Metronomo", file: "tracks/TM/METR.mp3" }
   ]
 };
 
