--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@ const songs = {
     { name: "Guitarra Base", file: "tracks/TM/GUITAR_RHYTHM.mp3" },
     { name: "Outro", file: "tracks/TM/OUTRO.mp3" },
     { name: "Metronomo", file: "tracks/TM/METR.mp3" }
+  ],
+  "Alice in Chains - Would?": [
+    { name: "Vocais", file: "tracks/WD/VOCALS.mp3" },
+    { name: "Back Vocal", file: "tracks/WD/BACK_VOCALS.mp3" },
+    { name: "Baixo", file: "tracks/WD/BASS.mp3" },
+    { name: "Bateria", file: "tracks/WD/DRUMS.mp3" },
+    { name: "Guitarras", file: "tracks/WD/GUITARS.mp3" },
+    { name: "Outro", file: "tracks/WD/OUTRO.mp3" },
+    { name: "Metronomo", file: "tracks/WD/METR.mp3" }
   ]
 };
 
