--- a/index.html
+++ b/index.html
@@ -121,6 +121,15 @@ const songs = {
     { name: "Guitarras", file: "tracks/WD/GUITARS.mp3" },
     { name: "Outro", file: "tracks/WD/OUTRO.mp3" },
     { name: "Metronomo", file: "tracks/WD/METR.mp3" }
+  ],
+  "Alice in Chains - Man in the Box": [
+    { name: "Vocais", file: "tracks/MITB/VOCALS.mp3" },
+    { name: "Back Vocal", file: "tracks/MITB/BACK_VOCALS.mp3" },
+    { name: "Baixo", file: "tracks/MITB/BASS.mp3" },
+    { name: "Bateria", file: "tracks/MITB/DRUMS.mp3" },
+    { name: "Guitarras", file: "tracks/MITB/GUITARS.mp3" },
+    { name: "Outro", file: "tracks/MITB/OUTRO.mp3" },
+    { name: "Metronomo", file: "tracks/MITB/METR.mp3" }
   ]
 };
 
