--- a/index.html
+++ b/index.html
@@ -130,6 +130,15 @@ const songs = {
     { name: "Guitarras", file: "tracks/MITB/GUITARS.mp3" },
     { name: "Outro", file: "tracks/MITB/OUTRO.mp3" },
     { name: "Metronomo", file: "tracks/MITB/METR.mp3" }
+  ],
+  "Red Hot Chili Peppers - 'Carne, Frango e Queijo'": [
+    { name: "Vocais", file: "tracks/CFQ/VOCALS.mp3" },
+    { name: "Back Vocal", file: "tracks/CFQ/BACK_VOCALS.mp3" },
+    { name: "Baixo", file: "tracks/CFQ/BASS.mp3" },
+    { name: "Bateria", file: "tracks/CFQ/DRUMS.mp3" },
+    { name: "Guitarras", file: "tracks/CFQ/GUITARS.mp3" },
+    { name: "Outro", file: "tracks/CFQ/OUTRO.mp3" },
+    { name: "Metronomo", file: "tracks/CFQ/METR.mp3" }
   ]
 };
 
