--- a/index.html
+++ b/index.html
@@ -139,6 +139,15 @@ const songs = {
     { name: "Guitarras", file: "tracks/CFQ/GUITARS.mp3" },
     { name: "Outro", file: "tracks/CFQ/OUTRO.mp3" },
     { name: "Metronomo", file: "tracks/CFQ/METR.mp3" }
+  ],
+    "Audioslave - Doesn't remind me": [
+    { name: "Vocais", file: "tracks/DRM/VOCALS.mp3" },
+    { name: "Baixo", file: "tracks/DRM/BASS.mp3" },
+    { name: "Bateria", file: "tracks/DRM/DRUMS.mp3" },
+    { name: "Guitarra Solo", file: "tracks/DRM/GUITAR_LEAD.mp3" },
+    { name: "Guitarra Base", file: "tracks/DRM/GUITAR_RHYTHM.mp3" },
+    { name: "Outro", file: "tracks/DRM/OUTRO.mp3" },
+    { name: "Metronomo", file: "tracks/DRM/METR.mp3" }
   ]
 };
 
