--- a/index.html
+++ b/index.html
@@ -140,6 +140,15 @@ const songs = {
     { name: "Outro", file: "tracks/CFQ/OUTRO.mp3" },
     { name: "Metronomo", file: "tracks/CFQ/METR.mp3" }
   ],
+    "Foo Fighters - Learn to Fly": [
+    { name: "Vocais", file: "tracks/LTF/VOCALS.mp3" },
+    { name: "Baixo", file: "tracks/LTF/BASS.mp3" },
+    { name: "Bateria", file: "tracks/LTF/DRUMS.mp3" },
+    { name: "Guitarra Solo", file: "tracks/LTF/GUITAR_LEAD.mp3" },
+    { name: "Guitarra Base", file: "tracks/LTF/GUITAR_RHYTHM.mp3" },
+    { name: "Outro", file: "tracks/LTF/OUTRO.mp3" },
+    { name: "Metronomo", file: "tracks/LTF/METR.mp3" }
+  ],
     "Audioslave - Doesn't remind me": [
     { name: "Vocais", file: "tracks/DRM/VOCALS.mp3" },
     { name: "Baixo", file: "tracks/DRM/BASS.mp3" },
