--- a/index.html
+++ b/index.html
@@ -157,6 +157,15 @@ const songs = {
     { name: "Guitarra Base", file: "tracks/DRM/GUITAR_RHYTHM.mp3" },
     { name: "Outro", file: "tracks/DRM/OUTRO.mp3" },
     { name: "Metronomo", file: "tracks/DRM/METR.mp3" }
+  ],
+  "Red Hot Chili Peppers - Dani California": [
+    { name: "Vocais", file: "tracks/DC/VOCALS.mp3" },
+    { name: "Back Vocal", file: "tracks/DC/BACK_VOCALS.mp3" },
+    { name: "Baixo", file: "tracks/DC/BASS.mp3" },
+    { name: "Bateria", file: "tracks/DC/DRUMS.mp3" },
+    { name: "Guitarras", file: "tracks/DC/GUITARS.mp3" },
+    { name: "Outro", file: "tracks/DC/OUTRO.mp3" },
+    { name: "Metronomo", file: "tracks/DC/METR.mp3" }
   ]
 };
 
