--- a/index.html
+++ b/index.html
@@ -166,6 +166,15 @@ const songs = {
     { name: "Guitarras", file: "tracks/DC/GUITARS.mp3" },
     { name: "Outro", file: "tracks/DC/OUTRO.mp3" },
     { name: "Metronomo", file: "tracks/DC/METR.mp3" }
+  ],
+  "Alice in Chains - No Excuses": [
+    { name: "Vocais", file: "tracks/NE/VOCALS.mp3" },
+    { name: "Back Vocal", file: "tracks/NE/BACK_VOCALS.mp3" },
+    { name: "Baixo", file: "tracks/NE/BASS.mp3" },
+    { name: "Bateria", file: "tracks/NE/DRUMS.mp3" },
+    { name: "Guitarras", file: "tracks/NE/GUITARS.mp3" },
+    { name: "Outro", file: "tracks/NE/OUTRO.mp3" },
+    { name: "Metronomo", file: "tracks/NE/METR.mp3" }
   ]
 };
 
