--- a/index.html
+++ b/index.html
@@ -175,6 +175,15 @@ const songs = {
     { name: "Guitarras", file: "tracks/NE/GUITARS.mp3" },
     { name: "Outro", file: "tracks/NE/OUTRO.mp3" },
     { name: "Metronomo", file: "tracks/NE/METR.mp3" }
+  ],
+    "The Smashing Pumpkins - Bullet with Butterfly Wings": [
+    { name: "Vocais", file: "tracks/BWBW/VOCALS.mp3" },
+    { name: "Baixo", file: "tracks/BWBW/BASS.mp3" },
+    { name: "Bateria", file: "tracks/BWBW/DRUMS.mp3" },
+    { name: "Guitarra Solo", file: "tracks/BWBW/GUITAR_LEAD.mp3" },
+    { name: "Guitarra Base", file: "tracks/BWBW/GUITAR_RHYTHM.mp3" },
+    { name: "Outro", file: "tracks/BWBW/OUTRO.mp3" },
+    { name: "Metronomo", file: "tracks/BWBW/METR.mp3" }
   ]
 };
 
