--- a/index.html
+++ b/index.html
@@ -184,6 +184,15 @@ const songs = {
     { name: "Guitarra Base", file: "tracks/BWBW/GUITAR_RHYTHM.mp3" },
     { name: "Outro", file: "tracks/BWBW/OUTRO.mp3" },
     { name: "Metronomo", file: "tracks/BWBW/METR.mp3" }
+  ],
+    "Foo Fighters - All my Life": [
+    { name: "Vocais", file: "tracks/AML/VOCALS.mp3" },
+    { name: "Baixo", file: "tracks/AML/BASS.mp3" },
+    { name: "Bateria", file: "tracks/AML/DRUMS.mp3" },
+    { name: "Guitarra Solo", file: "tracks/AML/GUITAR_LEAD.mp3" },
+    { name: "Guitarra Base", file: "tracks/AML/GUITAR_RHYTHM.mp3" },
+    { name: "Outro", file: "tracks/AML/OUTRO.mp3" },
+    { name: "Metronomo", file: "tracks/AML/METR.mp3" }
   ]
 };
 
