--- a/index.html
+++ b/index.html
@@ -193,6 +193,15 @@ const songs = {
     { name: "Guitarra Base", file: "tracks/AML/GUITAR_RHYTHM.mp3" },
     { name: "Outro", file: "tracks/AML/OUTRO.mp3" },
     { name: "Metronomo", file: "tracks/AML/METR.mp3" }
+  ],
+    "Metallica - Enter Sandman": [
+    { name: "Vocais", file: "tracks/ES/VOCALS.mp3" },
+    { name: "Baixo", file: "tracks/ES/BASS.mp3" },
+    { name: "Bateria", file: "tracks/ES/DRUMS.mp3" },
+    { name: "Guitarra Solo", file: "tracks/ES/GUITAR_LEAD.mp3" },
+    { name: "Guitarra Base", file: "tracks/ES/GUITAR_RHYTHM.mp3" },
+    { name: "Outro", file: "tracks/ES/OUTRO.mp3" },
+    { name: "Metronomo", file: "tracks/ES/METR.mp3" }
   ]
 };
 
